--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/stripe-js": "^4.4.0",
     "@tabler/icons-react": "^3.12.0",
     "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
@@ -26,12 +27,13 @@
     "lucide-react": "^0.428.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "stripe": "^16.9.0",
     "svix": "^1.30.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
